# Person-Of-Interest

./: .gitignore  README.md  STREAMLIT_README.md  complete_example.py  config.yaml  example_usage.py  mkdocs.yml  pyproject.toml  requirements_streamlit.txt  run_streamlit.py  run_ui.py  streamlit_app.py  test_streamlit_integration.py  update_config.py
src/: app.py  simple_streamlit_app.py  streamlit_app.py
src/person_of_interest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/poi/: __init__.py  app.py  cli.py
src/poi/encoding/: __init__.py  clip_encoder.py  face_encoder.py  siglip_encoder.py  text_encoder.py
src/poi/preprocessing/: __init__.py  face_detector.py
src/poi/search/: enhanced_text_search.py  face_search.py  text_search.py
src/poi/vector_db/: face_vector_db.py
