[project]
name = "person-of-interest"
version = "0.1.0"
description = "Face image processing and semantic search application using RetinaFace and vector databases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "svlearn-bootcamp>=0.1.7",
    # Face detection and processing (using MediaPipe - more compatible)
    "mediapipe>=0.10.0",
    "opencv-python>=4.6.0,<4.7.0",
    "Pillow>=10.0.0",
    # Deep learning and image encoding
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "facenet-pytorch>=2.5.3",
    "insightface>=0.7.3",
    # Vector database (using Qdrant like rag_to_riches)
    "qdrant-client[fastembed]>=1.14.3",
    "sentence-transformers>=4.1.0",
    "open-clip-torch>=2.32.0",
    # Utilities (following rag_to_riches patterns)
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "icontract>=2.7.1",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    # Web UI
    "streamlit>=1.49.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    # ... other includes like README, pyproject.toml, etc.
]

[tool.hatch.build.targets.wheel]
packages = ["src/poi"]

# Optional dependencies for different use cases
[project.optional-dependencies]
gpu = [
    "torch[cuda]>=2.0.0",
    "torchvision[cuda]>=0.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
